- [SYSTEM] [NET2MONGO] Allow to get network configuration from /etc/rc.conf AND /etc/rc.conf.d/network, and accept more ifconfig formats
### Added
- [OAUTH] Add 'Access-Control-Allow-Origin' header to oauth2 endpoints for API requests through SPAs
- [GUI] [SYSTEM] Add nginx in the apache jail to work as proxy and serve static files for gunicorn
### Changed
- [GUI] [SYSTEM] Replace apache's WSGI with gunicorn to serve GUI
### Removed
- [APACHE] Completely remove apache package and logic in code (service, handling, etc...)


## [2.1.4] - 2022-11-18
### Fixed
- [IDP] [API] Don't fail on token updates with explicit expire_at
- [API_PARSER] [IMPERVA] Use requests' auth object instead of manually created Authorization header
- [API_PARSER] [IMPERVA] Typo in logger made the process crash
- [API_PARSER] [SYMANTEC] Correctly extracting token from downloaded archive 
- [SSO_FORWARD] Missing variable in logger
- [PORTAL] Various logger levels and message corrections
### Removed
- [API_PARSER] [ELASTICSEARCH] Obsolete/non-working parser


## [2.1.3] - 2022-11-09
### Fixed
- [API_PARSER] [IMPERVA] Prevent infinite download loop when a file cannot be decoded
- [API_PARSER] [SYMANTEC] Fix retrieve of token from downloaded archive tail
### Added
- [API_PARSER] [CROWDSTRIKE] Add api_host to 'url' event log field


## [2.1.2] - 2022-10-27
### Changed
- [INTERNAL] [REDIS_SESSIONS] Allow key's expiration to be set using a datetime object
- [IDP] [API] token's APIs now take an 'expire_at' parameter instead of a 'timeout' parameter
### Fixed
- [API_PARSER] [SOPHOS_CLOUD] Api return 400 http_code if trying to fetch more than 24h
- [API_PARSER] [IMPERVA] Download multiple files at once, to prevent delay increasing
- [API_PARSER] [SYMANTEC]  Don't use token if it's older than 24h, seems to be expired
- [API_PARSER] [CROWDSTRIKE] Prevent last_api_call stagnation if no events where retrieved during the last 24h


## [2.1.1] - 2022-10-19
### Fixed