@@ -238,7 +238,8 @@ class FrontendForm(ModelForm):
                            'sophos_cloud_client_id', 'sophos_cloud_client_secret', 'sophos_cloud_tenant_id',
                            'trendmicro_worryfree_access_token', 'trendmicro_worryfree_secret_key', 'trendmicro_worryfree_server_name',
                            'trendmicro_worryfree_server_port',
-                            'safenet_tenant_code', 'safenet_apikey'
+                           'safenet_tenant_code', 'safenet_apikey',
+                           'proofpoint_casb_api_key','proofpoint_casb_client_id','proofpoint_casb_client_secret'
                            ]:
             self.fields[field_name].required = False
 
@@ -321,7 +322,8 @@ class FrontendForm(ModelForm):
                   'gsuite_alertcenter_json_conf', 'gsuite_alertcenter_admin_mail',
                   'sophos_cloud_client_id', 'sophos_cloud_client_secret', 'sophos_cloud_tenant_id',
                   'trendmicro_worryfree_access_token', 'trendmicro_worryfree_secret_key', 'trendmicro_worryfree_server_name',
-                  'trendmicro_worryfree_server_port', 'safenet_tenant_code', 'safenet_apikey', 'darwin_mode')
+                  'trendmicro_worryfree_server_port', 'safenet_tenant_code', 'safenet_apikey',
+                  'proofpoint_casb_api_key','proofpoint_casb_client_id','proofpoint_casb_client_secret', 'darwin_mode')
 
         widgets = {
             'enabled': CheckboxInput(attrs={'class': "js-switch"}),
@@ -470,7 +472,10 @@ class FrontendForm(ModelForm):
             'trendmicro_worryfree_server_port': TextInput(attrs={'class': 'form-control'}),
             'safenet_tenant_code': TextInput(attrs={'class': 'form-control'}),
             'safenet_apikey': TextInput(attrs={'class': 'form-control'}),
-}
+            'proofpoint_casb_api_key': TextInput(attrs={'class': 'form-control'}),
+            'proofpoint_casb_client_id': TextInput(attrs={'class': 'form-control'}),
+            'proofpoint_casb_client_secret': TextInput(attrs={'type': 'password','class': 'form-control'}),
+        }
 
     def clean_name(self):
         """ HAProxy does not support space in frontend/listen name directive, replace them by _ """
