@@ -1635,6 +1635,30 @@
                         </div>
                       </div>
 
+                      <div class="col-md-12 api_clients_row" id="api_proofpoint_casb_row">
+                        <div class="form-group">
+                          <label class="col-sm-3 control-label">{{ form.proofpoint_casb_api_key.label }}</label>
+                          <div class="col-sm-5">
+                            {{ form.proofpoint_casb_api_key }}
+                            {{ form.proofpoint_casb_api_key.errors|safe }}
+                          </div>
+                        </div>
+                        <div class="form-group">
+                          <label class="col-sm-3 control-label">{{ form.proofpoint_casb_client_id.label }}</label>
+                          <div class="col-sm-5">
+                            {{ form.proofpoint_casb_client_id }}
+                            {{ form.proofpoint_casb_client_id.errors|safe }}
+                          </div>
+                        </div>
+                        <div class="form-group">
+                          <label class="col-sm-3 control-label">{{ form.proofpoint_casb_client_secret.label }}</label>
+                          <div class="col-sm-5">
+                            {{ form.proofpoint_casb_client_secret }}
+                            {{ form.proofpoint_casb_client_secret.errors|safe }}
+                          </div>
+                        </div>
+                      </div>
+
                       <div class="col-md-12 api-mode">
                         <div class="text-center mar-btm">
                           <button class="btn btn-warning" id="test_api_parser" type="button">
