@@ -58,6 +58,7 @@ from toolkit.api_parser.sophos_cloud.sophos_cloud import SophosCloudParser
 
 from toolkit.api_parser.trendmicro_worryfree.trendmicro_worryfree import TrendmicroWorryfreeParser
 from toolkit.api_parser.safenet.safenet import SafenetParser
+from toolkit.api_parser.proofpoint_casb.proofpoint_casb import ProofpointCASBParser
 
 logging.config.dictConfig(settings.LOG_SETTINGS)
 logger = logging.getLogger('gui')
@@ -94,7 +95,8 @@ PARSER_LIST = {
     "gsuite_alertcenter": GsuiteAlertcenterParser,
     "sophos_cloud": SophosCloudParser,
     "trendmicro_worryfree": TrendmicroWorryfreeParser,
-    "safenet": SafenetParser
+    "safenet": SafenetParser,
+    "proofpoint_casb": ProofpointCASBParser
 }
 
 
