@@ -14,6 +14,7 @@ and this project adheres to [Semantic Versioning](https://semver.org/spec/v2.0.0
 ### Added
 - [OAUTH] Add 'Access-Control-Allow-Origin' header to oauth2 endpoints for API requests through SPAs
 - [GUI] [SYSTEM] Add nginx in the apache jail to work as proxy and serve static files for gunicorn
+- [API_PARSER] [PROOFPOINT_CASB] New api parser Proofpoint CASB
 ### Changed
 - [GUI] [SYSTEM] Replace apache's WSGI with gunicorn to serve GUI
 ### Removed
